# mmn-14

./: .ICEauthority  .bash_history  .gitconfig  README.md
.CLion2018.1/config/: clion.key
.CLion2018.1/config/options/: dimensions.xml  github_settings.xml  ide.general.xml  options.xml  recentProjectDirectories.xml  runner.layout.xml  stubIndex.xml  updates.xml  usage.statistics.xml  window.manager.xml
.CLion2018.1/config/plugins/: availables.xml  availables.xml.etag  extensions.xml
.CLion2018.1/system/: .home
Desktop/mmn 22/: 1  1.output  2  2.out  3  3.out  4  4.out  5  5.out  CMakeLists.txt  makefile  myset.c  set.c  set.h
Desktop/mmn12/: 01  CMakeLists.txt  main
Desktop/mmn12/my_bcmp/: makefile  (+17 more)
Desktop/mmn14/: CMakeLists.txt  EntryUtils.c  EntryUtils.h  Extern.h  ExternLocationCalculator.h  FileContextDefenition.c  FileContextDefenition.h  FileContextUtils.c  FileContextUtils.h  GeneralUtils.h  IntUtils.c  LineUtils.c  LineUtils.h  OperationData.h  Parser.c  Symbol.h  assembler  constants.h  main.c  makefile
Desktop/mmn14/examples/: valid1.ent  valid1.ext  valid1.ob  valid2.as  valid2.ob
mmn14/: Entry.h  EntryUtils.c  Extern.h  ExternLocationCalculator.c  FileContextDefenition.c  FileContextUtils.c  FileUtils.c  FileUtils.h  GeneralUtils.c  GeneralUtils.h  IntUtils.c  IntUtils.h  LineUtils.c  LineUtils.h  LogUtils.c  LogUtils.h  OperationData.h  Parser.c  Parser.h  SmallComponentDefenitions.h  Symbol.h  WordsGenerator.c  WordsGenerator.h  assembler  constants.h  main.c
mmn14/examples/: Invalid1.as  Invalid2.as  Invalid3.as  error_log.txt  valid2.ent
(+58 files in other folders)
